crates/jsonschema-macros/tests/ui/unknown_method_key.stderr
error: unknown method `bogus`
 --> tests/ui/unknown_method_key.rs:3:13
  |
3 |     methods(bogus = false)
  |             ^^^^^
