crates/jsonschema-macros/tests/ui/unknown_method_key.rs
#[jsonschema::validator(
    schema = r#"{"type":"string"}"#,
    methods(bogus = false)
)]
struct UnknownMethodKeyValidator;

fn main() {}
